tests/NormalTests/paczka1/small_fuzzy/48863814.err
Error in line 8: S302 A242 84,6
Error in line 3: XTFA8XBMH S302 5,0
